[package]
name = "gl"
version = "0.1.0"
authors = ["Ketan Reynolds <ketan.cs.reynolds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gl_4_5", "core"]
core = []
fallbacks = []
gl_3_3 = []
gl_4_5 = []

[lib]
name = "gl"
path = "./src/lib.rs"

[build-dependencies]
gl_generator = "0.14"

[dependencies]
