[package]
name = "gl"
version = "1.0.0"
authors = ["Ketan Reynolds <ketan.cs.reynolds@gmail.com>"]
edition = "2018"

[features]
default = ["gl_4_5", "core"]
core = []
fallbacks = []
gl_3_3 = []
gl_4_5 = []

[lib]
name = "gl"
path = "./src/lib.rs"

[build-dependencies]
gl_generator = "0.14"

[dependencies]
